Integrate Android with firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_native_splash: ^2.4.6
   flutter_svg: ^2.2.0
   shared_preferences: ^2.5.3
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_test:
