--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.6.12
   intl: ^0.20.2
   fluttertoast: ^8.2.12
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
